--- a/style/scss/utilities/_character.scss
+++ b/style/scss/utilities/_character.scss
@@ -34,7 +34,8 @@
         border-radius: variables.$border-radius-base;
         outline: none;
 
-        &:hover {
+        &:hover,
+        &:focus {
           outline: none;
           border: variables.$border-primary;
         }
