--- a/style/scss/utilities/_contact.scss
+++ b/style/scss/utilities/_contact.scss
@@ -44,7 +44,8 @@
         border-bottom: variables.$border-white;
         outline: none;
 
-        &:hover {
+        &:hover,
+        &:focus {
           outline: none;
           border-bottom: variables.$border-primary;
         }
