--- a/style/scss/utilities/_variables.scss
+++ b/style/scss/utilities/_variables.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Nunito:wght@200;300;400;500;600;700;800&display=swap");
 
 $color-white: #fff;
-$color-primary: #91a644;
+$color-primary: #2c401e;
 $color-secondary: #eeddac;
 $color-accent: #6a5243;
 $color-error: #ff3860;
