--- a/style/scss/utilities/_general.scss
+++ b/style/scss/utilities/_general.scss
@@ -16,6 +16,7 @@ body {
   background-color: variables.$color-white;
   font-family: variables.$font-primary;
   font-size: variables.$font-size;
+  line-height: 1.2;
 }
 
 .container {
@@ -35,9 +36,22 @@ body {
   font-size: variables.$font-size * 1.2;
   cursor: pointer;
 
-  &:hover {
-    color: black;
+  &:hover,
+  &:focus {
+    color: variables.$color-secondary;
     @include boxShadow(0, 1rem, 1rem, -0.75rem);
     transform: scale(1.1);
   }
+}
+.screen-reader-text {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  word-wrap: normal !important;
 }
